<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/standard_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sort_by_price" />

            <RadioButton
                android:id="@+id/radio_button_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sort_by_name" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="8dp"
            android:text="@string/sort" />
    </FrameLayout>
</layout>


