<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionName="shared_element_container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/filter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/added_items_in_the_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/fab_count_bg"
            android:elevation="7dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/fab_cart"
            app:layout_constraintTop_toTopOf="@id/fab_cart"
            tools:text="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_filter"
            app:spanCount="2"
            tools:context=".presentation.ui.CategoryFragment"
            tools:listitem="@layout/product_item" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/animation_rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>